[package]
name = "mer"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

default = ["std", "backends", "derive"]

std = ["serde/std"]
backends = ["std", "serde_json"]
derive = ["serde/derive"]

[dependencies]
serde = { version = "^1.0.116", default-features = false }
serde_json = { version = "^1.0.57", optional = true }
