[package]
name = "mer"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

default = ["std", "backends", "frontends", "derive"]

std = ["serde/std", "serde-transcode/std", "erased-serde/std"]
backends = ["std", "serde_json"]
frontends = []
derive = ["serde/derive"]

[dependencies]
serde = { version = "1.0.116", default-features = false, features = ["alloc"] }
serde-transcode = { version = "1.2.0", git = "https://github.com/volllly/serde-transcode", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.57", optional = true }
erased-serde = { version = "0.3.12", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_json = "1.0.57"
