[package]
name = "derive_macros"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
mer = { path = "../mer" }

[lib]
proc-macro = true

# [[test]]
# name = "test"
# path = "test/tests.rs"
