[package]
name = "mer"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

default = ["std"]

std = ["serde/std", "anyhow/std", "thiserror"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
derive_builder = "0.10.0-alpha"
log = { version = "0.4", default-features = false }
serde = { version = "1.0.116", default-features = false, features = ["alloc"] }
spin = "0.7.0"
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0.57"
rand = "0.8"
