[package]
name = "merfolk"
version = "0.1.4"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A minimal extensible RPC framework. Cross platform and `no_std`"
repository = "https://github.com/volllly/merfolk"
readme = "../README.md"
documentation = "https://docs.rs/merfolk/"
keywords = ["RPC", "mer", "no_std"]

[features]

default = ["std"]

std = ["serde/std", "anyhow/std", "thiserror"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
derive_builder = "0.11.2"
log = { version = "0.4", default-features = false }
serde = { version = "1.0.144", default-features = false, features = ["alloc"] }
spin = "0.9.4"
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0.83"
rand = "0.8"

# [doc-dependencies]
merfolk_backend_http = { path = "../backends/http" }
merfolk_backend_in_process = { path = "../backends/in-process" }
merfolk_backend_serialport = { path = "../backends/serialport" }

merfolk_frontend_derive = { path = "../frontends/derive/core" }
merfolk_frontend_register = { path = "../frontends/register" }
merfolk_frontend_duplex = { path = "../frontends/duplex" }
merfolk_frontend_logger = { path = "../frontends/logger" }

merfolk_middleware_authentication = { path = "../middlewares/authentication" }
merfolk_middleware_router = { path = "../middlewares/router" }

hyper = { version = "0.14", features = ["client", "server", "tcp"] }
