[package]
name = "merfolk_backend_http"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A HTTP `Backend` for merfolk."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_backend_http/"
keywords = ["RPC", "merfolk", "Http"]

[features]

default = ["http2"]

http1 = ["hyper/http1"]

http2 = ["hyper/http2"]

[dependencies]
anyhow = "1.0"
derive_builder = "0.11.2"
log = "0.4"
merfolk = { path = "../../merfolk", features = ["std"], version = "0.1" }
thiserror = "1.0"
serde = "1.0.139"
serde_json = "1.0.82"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["client", "server", "tcp"] }

[dev-dependencies]
merfolk_frontend_register = { path = "../../frontends/register" }

rand = "0.8"
criterion = "0.3"

[[test]]
name = "test"
path = "test/tests.rs"

[[bench]]
name = "performance"
harness = false
