[package]
name = "mer_backend_in_process"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

[dependencies]
mer = { path = "../../mer" }

serde = "1.0.116"
serde_json = "1.0.57"

tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync"] }

snafu = "0.6.9"
log = "0.4"

[dev-dependencies]
mer_frontend_register = { path = "../../frontends/register" }

rand = "0.8"
flexi_logger = "0.16"

[[test]]
name = "test"
path = "test/tests.rs"
