[package]
name = "merfolk_backend_in_process"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.10.0-alpha"
log = "0.4"
merfolk = { path = "../../merfolk" }
serde = "1.0.116"
serde_json = "1.0.57"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
merfolk_frontend_register = { path = "../../frontends/register" }

rand = "0.8"

[[test]]
name = "test"
path = "test/tests.rs"
