[package]
name = "merfolk_backend_in_process"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A `Backend` for merfolk using in process channels. Mostly used for testing."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_backend_in_process/"
keywords = ["RPC", "merfolk", "channel"]

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.11.2"
log = "0.4"
merfolk = { path = "../../merfolk", features = ["std"], version = "0.1" }
serde = "1.0.142"
serde_json = "1.0.82"
thiserror = "1.0"
tokio = { version = "1.20", features = ["rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
merfolk_frontend_register = { path = "../../frontends/register" }

rand = "0.8"
criterion = "0.3"

[[test]]
name = "test"
path = "test/tests.rs"

[[bench]]
name = "performance"
harness = false
