[package]
name = "mer_backend_serialport"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

default = []

[dependencies]
anyhow = "1.0"
derive_builder = "0.10.0-alpha"
log = "0.4"
mer = { path = "../../mer" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
serialport = "4.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
mer_frontend_register = { path = "../../frontends/register" }

rand = "0.8"

[[test]]
name = "test"
path = "test/tests.rs"
