[package]
name = "merfolk_backend_serialport"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A serial port `Backend` for merfolk."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_backend_serialport/"
keywords = ["RPC", "merfolk", "Channel"]

[features]

default = []

[dependencies]
anyhow = "1.0"
derive_builder = "0.10.0"
log = "0.4"
merfolk = { path = "../../merfolk", features = ["std"], version = "0.1" }
serde = { version = "1.0.116", features = ["derive"] }
ron = "0.6"
serialport = "4.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
merfolk_frontend_register = { path = "../../frontends/register" }

rand = "0.8"
criterion = "0.3"

[[test]]
name = "test"
path = "test/tests.rs"

[[bench]]
name = "performance"
harness = false
