[package]
name = "merfolk_frontend_duplex"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

default = ["std"]

std = [
  "log/std"
]

[dependencies]
anyhow = "1.0"
derive_builder = "0.10.0-alpha"
log = { version = "0.4", default-features = false }
merfolk = { path = "../../merfolk" }
serde = "1.0.116"

[dev-dependencies]
merfolk_backend_in_process = { path = "../../backends/in-process" }
merfolk_frontend_register = { path = "../../frontends/register" }

hyper = "0.14"
rand = "0.8"
tokio = { version = "1.0", features = ["sync"] }

[[test]]
name = "test"
path = "test/tests.rs"
