[package]
name = "merfolk_frontend_duplex"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A `Frontend` for merfolk allowing the use of different frontends for calling and receiving."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_frontend_duplex/"
keywords = ["RPC", "merfolk"]

[features]

default = ["std"]

std = [
  "log/std",
  "merfolk/std"
]

[dependencies]
anyhow = "1.0"
derive_builder = "0.11.2"
log = { version = "0.4", default-features = false }
merfolk = { path = "../../merfolk", version = "0.1" }
serde = "1.0.139"

[dev-dependencies]
merfolk_backend_in_process = { path = "../../backends/in-process" }
merfolk_frontend_register = { path = "../../frontends/register" }

hyper = "0.14"
rand = "0.8"
tokio = { version = "1.20", features = ["sync"] }
criterion = "0.3"

[[test]]
name = "test"
path = "test/tests.rs"

[[bench]]
name = "performance"
harness = false
