[package]
name = "mer_frontend_logger"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.10.0-alpha"
log = { version = "0.4", features = ["std"] }
mer = { path = "../../mer" }
serde = "1.0.116"
thiserror = "1.0"
wildmatch = "1.0"

[dev-dependencies]
mer_backend_in_process = { path = "../../backends/in-process" }

tokio = { version = "1.0", features = ["sync"] }

[[test]]
name = "test"
path = "test/tests.rs"
