[package]
name = "merfolk_frontend_logger"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A `Frontend` for merfolk using the log crate."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_frontend_logger/"
keywords = ["RPC", "merfolk", "log"]

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.10.0"
log = { version = "0.4", features = ["std"] }
merfolk = { path = "../../merfolk", features = ["std"], version = "0.1" }
serde = "1.0.139"
thiserror = "1.0"
wildmatch = "2.1"

[dev-dependencies]
merfolk_backend_in_process = { path = "../../backends/in-process" }

tokio = { version = "1.0", features = ["sync"] }
criterion = "0.3"

[[test]]
name = "test"
path = "test/tests.rs"

[[bench]]
name = "performance"
harness = false
