[package]
name = "merfolk_frontend_register"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.10.0-alpha"
log = { version = "0.4", default-features = false }
merfolk = { path = "../../merfolk" }
serde = "1.0.116"
thiserror = "1.0"

[dev-dependencies]
merfolk_backend_in_process = { path = "../../backends/in-process" }
merfolk_backend_http = { path = "../../backends/http" }

hyper = "0.14"
rand = "0.8"
tokio = { version = "1.0", features = ["sync"] }

[[test]]
name = "test"
path = "test/tests.rs"
