[package]
name = "merfolk_frontend_register"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A `Frontend` for merfolk allowing for manuel procedure registration."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_frontend_register/"
keywords = ["RPC", "merfolk", "log"]

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.11.2"
log = { version = "0.4", default-features = false }
merfolk = { path = "../../merfolk", features = ["std"], version = "0.1" }
serde = "1.0.144"
thiserror = "1.0"

[dev-dependencies]
merfolk_backend_in_process = { path = "../../backends/in-process" }
merfolk_backend_http = { path = "../../backends/http" }

hyper = "0.14"
rand = "0.8"
tokio = { version = "1.36", features = ["sync"] }
criterion = "0.4"

[[test]]
name = "test"
path = "test/tests.rs"

[[bench]]
name = "performance"
harness = false
