[package]
name = "merfolk_middleware_authentication"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.10.0-alpha"
log = "0.4"
merfolk = { path = "../../merfolk" }
serde = { version = "1.0.116", features=["derive"] }
thiserror = "1.0"
wildmatch = "1.0"

[dev-dependencies]
merfolk_frontend_register = { path = "../../frontends/register" }
merfolk_backend_in_process = { path = "../../backends/in-process" }

rand = "0.8"
tokio = "1.0"

[[test]]
name = "test"
path = "test/tests.rs"
