[package]
name = "merfolk_middleware_authentication"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A `Middleware` for merfolk providing simple authentication."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_middleware_authentication/"
keywords = ["RPC", "merfolk", "authentication"]

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.11.2"
log = "0.4"
merfolk = { path = "../../merfolk", features=["std"], version = "0.1" }
serde = { version = "1.0.144", features=["derive"] }
thiserror = "1.0"
wildmatch = "2.1"

[dev-dependencies]
merfolk_frontend_register = { path = "../../frontends/register" }
merfolk_backend_in_process = { path = "../../backends/in-process" }

rand = "0.8"
tokio = "1.20"
criterion = "0.3"

[[test]]
name = "test"
path = "test/tests.rs"

[[bench]]
name = "performance"
harness = false
