[package]
name = "mer_middleware_router"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.10.0-alpha"
log = "0.4"
mer = { path = "../../mer" }
regex = "1"
thiserror = "1.0"

[dev-dependencies]
mer_frontend_register = { path = "../../frontends/register" }
mer_backend_in_process = { path = "../../backends/in-process" }
mer_middleware_authentication = { path = "../../middlewares/authentication" }

rand = "0.8"
tokio = "1.0"

[[test]]
name = "test"
path = "test/tests.rs"
