[package]
name = "merfolk_middleware_router"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A `Middleware` for merfolk providing simple routing."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_middleware_router/"
keywords = ["RPC", "merfolk", "authentication"]

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.10.0-alpha"
log = "0.4"
merfolk = { version = "0", features = ["std"]}
regex = "1"
thiserror = "1.0"

[dev-dependencies]
merfolk_frontend_register = { path = "../../frontends/register" }
merfolk_backend_in_process = { path = "../../backends/in-process" }
merfolk_middleware_authentication = { path = "../../middlewares/authentication" }

rand = "0.8"
tokio = "1.0"

[[test]]
name = "test"
path = "test/tests.rs"
