[package]
name = "merfolk_middleware_router"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A `Middleware` for merfolk providing simple routing."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_middleware_router/"
keywords = ["RPC", "merfolk", "authentication"]

[features]

[dependencies]
anyhow = "1.0"
derive_builder = "0.11.2"
log = "0.4"
merfolk = { path = "../../merfolk", features = ["std"], version = "0.1" }
regex = "1"
thiserror = "1.0"

[dev-dependencies]
merfolk_frontend_register = { path = "../../frontends/register" }
merfolk_backend_in_process = { path = "../../backends/in-process" }
merfolk_middleware_authentication = { path = "../../middlewares/authentication" }

rand = "0.8"
tokio = "1.36"
criterion = "0.4"

[[test]]
name = "test"
path = "test/tests.rs"

[[bench]]
name = "performance"
harness = false
