[package]
name = "merfolk_frontend_derive"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A `Frontend` for merfolk using derive macros."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_frontend_derive/"
keywords = ["RPC", "merfolk", "derive"]

[features]

default = ["std"]

std = [
  "thiserror",
  "log/std",
  "merfolk/std"
]

[dependencies]
anyhow = "1.0"
derive_builder = "0.11.2"
log = { version = "0.4", default-features = false }
merfolk =  { path = "../../../merfolk", version = "0.1" }
merfolk_frontend_derive_macros = { path = "../macros", version = "0.1" }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
merfolk_backend_in_process = { path = "../../../backends/in-process" }
merfolk_backend_http = { path = "../../../backends/http" }

hyper = "0.14"
serde = "1.0"
rand = "0.8"
tokio = { version = "1.21", features = ["sync"] }
criterion = "0.5"

[[test]]
name = "test"
path = "test/tests.rs"

[[bench]]
name = "performance"
harness = false
