[package]
name = "mer_frontend_derive_macros"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2018"

[features]

default = ["std"]

std = ["log/std"]

[dependencies]
anyhow = "1.0"
darling = "0.12"
log = { version = "0.4", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
mer_frontend_derive = { path = "../core" }

mer = { path = "../../../mer" }
serde = { version = "1.0", default-features = false }
derive_builder = "0.10.0-alpha"

[lib]
proc-macro = true

[[test]]
name = "test"
path = "test/tests.rs"
