[package]
name = "merfolk_frontend_derive_macros"
version = "0.1.0"
authors = ["Paul Volavsek <paul.volavsek@gmail.com>"]
edition = "2021"
license = "MIT"
description = "derive macros for merfolk_frontend_derive."
repository = "https://github.com/volllly/merfolk"
# readme = "../README.md"
documentation = "https://docs.rs/merfolk_frontend_derive_macros/"

[features]

default = ["std"]

std = ["log/std"]

[dependencies]
anyhow = "1.0"
darling = "0.14"
log = { version = "0.4", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
merfolk_frontend_derive = { path = "../core" }

merfolk = { path = "../../../merfolk" }
serde = { version = "1.0", default-features = false }
derive_builder = "0.11.2"

[lib]
proc-macro = true

[[test]]
name = "test"
path = "test/tests.rs"
